fix: Stop scrollbar causing x-overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,6 @@
 }
 
 #root {
-  width: 100vw;
+  width: 100%;
+  overflow-x: hidden;
 }
